Remove fonts to avoid flickering

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
 @import "tailwindcss";
 
 @theme {
-  --font-inter: 'Inter', system-ui, sans-serif;
   --color-neutral-250: oklch(0.68 0.004 0);
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: var(--font-inter), sans-serif;
+@layer base {
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
 }
